[gd_scene load_steps=6 format=3 uid="uid://chn0p0xyugfe3"]

[ext_resource type="FontFile" uid="uid://bijwsgm38kuwg" path="res://fonts/LGGothic.ttf" id="1_fr41l"]
[ext_resource type="Script" path="res://scripts/inventory_slot.gd" id="1_mcjsp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c1xqq"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.235294, 0.235294, 0.235294, 1)

[sub_resource type="Theme" id="Theme_gr5ur"]
TooltipLabel/font_sizes/font_size = 28
TooltipLabel/fonts/font = ExtResource("1_fr41l")
TooltipPanel/styles/panel = SubResource("StyleBoxFlat_c1xqq")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rdam3"]
bg_color = Color(0.180392, 0.160784, 0.137255, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 12

[node name="InventorySlot" type="PanelContainer"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_gr5ur")
theme_override_styles/panel = SubResource("StyleBoxFlat_rdam3")
script = ExtResource("1_mcjsp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
texture_filter = 1
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
